Fix layout on Firefox

--- a/page/styles.css
+++ b/page/styles.css
@@ -73,17 +73,17 @@ body {
 
 .groupheader-separator {
     height: 1px;
+    margin: 8px 0px;
     border-width: 0px;
     color: lightgray;
     background-color: lightgray;
 }
 
 .stream {
-    /* background: violet; */
     color: #686868;
     grid-row: 1;
     grid-column: 1/3;
-    width: auto;
+    width: fit-content;
 }
 
 select {
@@ -142,9 +142,8 @@ select {
     grid-column: 3;
 }
 
-.edit_icon {
+.edit-icon {
     display: flex;
-    /* background: blue; */
     color: #686868;
     align-items: center;
     grid-row: 1/3;
@@ -154,7 +153,6 @@ select {
 
 .edit-group-icon {
     display: flex;
-    /* background: blue; */
     color: transparent;
     align-items: center;
     grid-row: 1/3;
@@ -168,13 +166,13 @@ select {
     grid-column: 1;
     font-size: 25px;
     height: 25px;
+    width: 25px;
     padding-left: 10px;
     padding-right: 10px;
     text-decoration: none;
 }
 
 .sliderdiv {
-    /* background: greenyellow; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -219,7 +217,7 @@ select {
     opacity: 0.27;
 }
 
- .client_settings {
+ .client-settings {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -232,7 +230,7 @@ select {
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
   
-.client_setting_content {
+.client-setting-content {
     background-color: #fefefe;
     color: #686868;
     margin: 15% auto; /* 15% from the top and centered */
@@ -241,7 +239,7 @@ select {
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
-.client_input {
+.client-input {
     color: #686868;
     width: 100%;
     padding: 12px 20px;
